RESOLVED FIXED128355
Crash in MiniBrowser when using Command-W to close a WK2 window
https://bugs.webkit.org/show_bug.cgi?id=128355
Summary Crash in MiniBrowser when using Command-W to close a WK2 window
Anders Carlsson
Reported 2014-02-06 18:31:24 PST
Crash in MiniBrowser when using Command-W to close a WK2 window
Attachments
Patch (1.65 KB, patch)
2014-02-06 18:32 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2014-02-06 18:32:28 PST
Anders Carlsson
Comment 2 2014-02-06 18:36:14 PST
Note You need to log in before you can comment on or make changes to this bug.