Crash in MiniBrowser when using Command-W to close a WK2 window https://bugs.webkit.org/show_bug.cgi?id=128355 <rdar://problem/16008531>

Reviewed by Simon Fraser.

Don't set the API clients to nullptr when closing the page, just create new empty ones instead.
Too much code depends on the clients never being null.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):

Canonical link: https://commits.webkit.org/146378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163603 268f45cc-cd09-0410-ab3c-d52691b4dbfc